# KellyCriterionCalculator

./: README.md  pyproject.toml
src/KellyCriterionCalculator/: __init__.py  gui.py  kelly.py  main.py  utils.py
tests/: test_calculation_logic.py
