[project]
name = "kellycriterioncalculator"
version = "0.1.0"
description = "Desktop Kelly Criterion calculator for three-outcome matches"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["PySide6>=6.10"]

[project.scripts]
kelly-calculator = "KellyCriterionCalculator.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/KellyCriterionCalculator"]
